# node-based-image-processor

./: CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  hello_qt.cpp  hello_qt.pro  moc_InputNode.cpp  moc_MainWindow.cpp  moc_NodeModel.cpp  moc_OutputNode.cpp  node_image_editor  node_image_editor.pro
debug/: object_script.node_image_editor.Debug
project/node_image_editor/: main.cpp  mainwindow.cpp  mainwindow.h  node_image_editor.pro
release/: object_script.node_image_editor.Release
src/: MainWindow.cpp  MainWindow.h  Node.cpp  Node.h  NodeGraph.cpp  NodeGraph.h  NodeModel.h
src/nodes/: BrightnessContrastNode.cpp  BrightnessContrastNode.h  InputNode.cpp  InputNode.h  OutputNode.cpp  OutputNode.h
